fix button dot spacing

--- a/pilotconsole/src/components/FlightRecording.css
+++ b/pilotconsole/src/components/FlightRecording.css
@@ -42,6 +42,12 @@
     }
 }
 
+.dot {
+    position: relative;
+    top: 1px;
+    margin-right: var(--padding-tiny);
+}
+
 .flightrecording-container {
     background: none;
     /* background-color: var(--ghost); */
